--- a/.vscode/sample-1/index.html
+++ b/.vscode/sample-1/index.html
@@ -8,10 +8,8 @@
   </head>
   <body>
     <h1>サンプル</h1>
-    <div>入力欄</div>
-    <input type="number" value="123" id="input">
-  </div>
   <button id="exec">実行</button>
-  <div id="output"></div>
+  <button id="exec2">実行２</button>
+  <div id="output" class="item"></div>
   </body>
 </html>
